add pandas as test dependency

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install -e .
-        python -m pip install keyrings.alt
+        python -m pip install keyrings.alt pandas
     - name: Insert API key
       run: "echo ${{ secrets.API_KEY }} | keyring set rescale default"
     - name: Run test
