--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,9 +17,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
-      run: |
-        python -m pip install -e .
-        python -m pip install keyrings.alt pandas
+      run: python -m pip install -e .[dev]
     - name: Insert API key
       run: "echo ${{ secrets.API_KEY }} | keyring set rescale default"
     - name: Run test
